--- a/package.json
+++ b/package.json
@@ -37,60 +37,60 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "17.0.3",
-    "@angular/compiler": "17.0.3",
-    "@angular/core": "17.0.3",
-    "@angular/forms": "17.0.3",
-    "@angular/platform-browser": "17.0.3",
-    "@angular/platform-browser-dynamic": "17.0.3",
-    "@angular/router": "17.0.3",
+    "@angular/common": "17.1.3",
+    "@angular/compiler": "17.1.3",
+    "@angular/core": "17.1.3",
+    "@angular/forms": "17.1.3",
+    "@angular/platform-browser": "17.1.3",
+    "@angular/platform-browser-dynamic": "17.1.3",
+    "@angular/router": "17.1.3",
     "bootstrap": "^5.2.3",
     "isomorphic-ws": "^5.0.0",
     "rxjs": "7.8.1",
     "tslib": "^2.3.0",
     "ws": "^8.13.0",
-    "zone.js": "0.14.2"
+    "zone.js": "0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.0.1",
-    "@angular-devkit/core": "17.0.1",
-    "@angular-devkit/schematics": "17.0.1",
+    "@angular-devkit/build-angular": "17.1.3",
+    "@angular-devkit/core": "17.1.3",
+    "@angular-devkit/schematics": "17.1.3",
     "@angular-eslint/eslint-plugin": "17.0.1",
     "@angular-eslint/eslint-plugin-template": "17.0.1",
     "@angular-eslint/template-parser": "17.0.1",
-    "@angular/compiler-cli": "17.0.3",
-    "@nx/angular": "17.1.2",
-    "@nx/eslint-plugin": "17.1.2",
-    "@nx/jest": "17.1.2",
-    "@nx/js": "17.1.2",
-    "@nx/node": "17.1.2",
-    "@nx/vite": "17.1.2",
-    "@nx/workspace": "17.1.2",
-    "@schematics/angular": "17.0.1",
+    "@angular/compiler-cli": "17.1.3",
+    "@nx/angular": "18.0.4",
+    "@nx/eslint-plugin": "18.0.4",
+    "@nx/jest": "18.0.4",
+    "@nx/js": "18.0.4",
+    "@nx/node": "18.0.4",
+    "@nx/vite": "18.0.4",
+    "@nx/workspace": "18.0.4",
+    "@schematics/angular": "17.1.3",
     "@types/jest": "29.4.4",
-    "@types/node": "18.7.1",
-    "@typescript-eslint/eslint-plugin": "6.10.0",
-    "@typescript-eslint/parser": "6.10.0",
-    "@vitest/ui": "0.32.4",
+    "@types/node": "^18.16.9",
+    "@typescript-eslint/eslint-plugin": "6.13.2",
+    "@typescript-eslint/parser": "6.13.2",
+    "@vitest/ui": "^1.0.0",
     "dotenv": "10.0.0",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prefer-arrow": "1.2.2",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
-    "jest-preset-angular": "13.1.4",
+    "jest-preset-angular": "13.1.6",
     "jsdom": "22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "17.1.2",
+    "nx": "18.0.4",
     "prettier": "^2.8.8",
     "standard-version": "^9.0.0",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "5.2.2",
-    "vite": "4.4.9",
+    "typescript": "5.3.3",
+    "vite": "5.1.1",
     "vite-plugin-dts": "2.3.0",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.0.2",
-    "vitest": "0.32.4"
+    "vitest": "^1.0.0"
   }
 }
