--- a/package.json
+++ b/package.json
@@ -37,13 +37,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "17.1.3",
-    "@angular/compiler": "17.1.3",
-    "@angular/core": "17.1.3",
-    "@angular/forms": "17.1.3",
-    "@angular/platform-browser": "17.1.3",
-    "@angular/platform-browser-dynamic": "17.1.3",
-    "@angular/router": "17.1.3",
+    "@angular/common": "17.3.5",
+    "@angular/compiler": "17.3.5",
+    "@angular/core": "17.3.5",
+    "@angular/forms": "17.3.5",
+    "@angular/platform-browser": "17.3.5",
+    "@angular/platform-browser-dynamic": "17.3.5",
+    "@angular/router": "17.3.5",
     "bootstrap": "^5.2.3",
     "isomorphic-ws": "^5.0.0",
     "rxjs": "7.8.1",
@@ -52,45 +52,45 @@
     "zone.js": "0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.1.3",
-    "@angular-devkit/core": "17.1.3",
-    "@angular-devkit/schematics": "17.1.3",
-    "@angular-eslint/eslint-plugin": "17.0.1",
-    "@angular-eslint/eslint-plugin-template": "17.0.1",
-    "@angular-eslint/template-parser": "17.0.1",
-    "@angular/compiler-cli": "17.1.3",
-    "@nx/angular": "18.0.4",
-    "@nx/eslint-plugin": "18.0.4",
-    "@nx/jest": "18.0.4",
-    "@nx/js": "18.0.4",
-    "@nx/node": "18.0.4",
-    "@nx/vite": "18.0.4",
-    "@nx/workspace": "18.0.4",
-    "@schematics/angular": "17.1.3",
+    "@angular-devkit/build-angular": "17.3.5",
+    "@angular-devkit/core": "17.3.5",
+    "@angular-devkit/schematics": "17.3.5",
+    "@angular-eslint/eslint-plugin": "17.3.0",
+    "@angular-eslint/eslint-plugin-template": "17.3.0",
+    "@angular-eslint/template-parser": "17.3.0",
+    "@angular/compiler-cli": "17.3.5",
+    "@nx/angular": "18.3.3",
+    "@nx/eslint-plugin": "18.3.3",
+    "@nx/jest": "18.3.3",
+    "@nx/js": "18.3.3",
+    "@nx/node": "18.3.3",
+    "@nx/vite": "18.3.3",
+    "@nx/workspace": "18.3.3",
+    "@schematics/angular": "17.3.5",
     "@types/jest": "29.4.4",
     "@types/node": "^18.16.9",
     "@typescript-eslint/eslint-plugin": "6.13.2",
     "@typescript-eslint/parser": "6.13.2",
-    "@vitest/ui": "^1.0.0",
+    "@vitest/ui": "1.5.1",
     "dotenv": "10.0.0",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prefer-arrow": "1.2.2",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
-    "jest-preset-angular": "13.1.6",
+    "jest-preset-angular": "14.0.3",
     "jsdom": "22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "18.0.4",
+    "nx": "18.3.3",
     "prettier": "^2.8.8",
     "standard-version": "^9.0.0",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "5.3.3",
+    "typescript": "5.4.5",
     "vite": "5.1.1",
     "vite-plugin-dts": "2.3.0",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.0.2",
-    "vitest": "^1.0.0"
+    "vitest": "1.5.1"
   }
 }
